RESOLVED FIXED217543
[ macOS ] webaudio/OfflineAudioContext/onstatechange.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=217543
Summary [ macOS ] webaudio/OfflineAudioContext/onstatechange.html is a flaky failure
Hector Lopez
Reported 2020-10-09 17:16:47 PDT
webaudio/OfflineAudioContext/onstatechange.html Test is a flaky failure according to history on macOS. First occurrence coincides with import at r267307 History: https://results.webkit.org/?suite=layout-tests&test=webaudio%2FOfflineAudioContext%2Fonstatechange.html&platform=mac&limit=50000 Diff: --- /Volumes/Data/slave/catalina-debug-tests-wk2/build/layout-test-results/webaudio/OfflineAudioContext/onstatechange-expected.txt +++ /Volumes/Data/slave/catalina-debug-tests-wk2/build/layout-test-results/webaudio/OfflineAudioContext/onstatechange-actual.txt @@ -3,11 +3,11 @@ PASS Executing "test" PASS Audit report PASS > [test] Signaling of statechange event -PASS context.state is equal to running. +FAIL X context.state is not equal to running. Got closed. assert_true: expected true got false +PASS Context rendering resolved correctly. PASS context.state is equal to closed. -PASS Context rendering resolved correctly. PASS stateChangeCount is equal to 2. PASS After rendering context.state is equal to closed. -PASS < [test] All assertions passed. (total 5 assertions) -PASS # AUDIT TASK RUNNER FINISHED: 1 tasks ran successfully. +FAIL < [test] 1 out of 5 assertions were failed. assert_true: expected true got false +FAIL # AUDIT TASK RUNNER FINISHED: 1 out of 1 tasks were failed. assert_true: expected true got false
Attachments
Patch (5.87 KB, patch)
2020-11-02 12:23 PST, Chris Dumez
no flags
Patch (5.83 KB, patch)
2020-11-02 12:37 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2020-10-09 17:17:06 PDT
Hector Lopez
Comment 2 2020-10-09 17:21:41 PDT
Test expectation while investigated: https://trac.webkit.org/changeset/268303/webkit
Chris Dumez
Comment 3 2020-11-02 12:23:27 PST
Darin Adler
Comment 4 2020-11-02 12:34:05 PST
Comment on attachment 412960 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=412960&action=review > Source/WebCore/Modules/webaudio/OfflineAudioDestinationNode.cpp:105 > + callOnMainThread([this, result, currentSampleFrame = m_currentSampleFrame, protectedThis = WTFMove(protectedThis)]() mutable { > + context().postTask([this, protectedThis = WTFMove(protectedThis), result, currentSampleFrame]() mutable { Doesn’t seem like we need callOnMainThread if calling postTask. It already does callOnMainThread.
Darin Adler
Comment 5 2020-11-02 12:34:35 PST
Oops, didn’t mean to change this to darin/review? Don’t know why bugs.webkit.org does that.
Chris Dumez
Comment 6 2020-11-02 12:35:06 PST
(In reply to Darin Adler from comment #4) > Comment on attachment 412960 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=412960&action=review > > > Source/WebCore/Modules/webaudio/OfflineAudioDestinationNode.cpp:105 > > + callOnMainThread([this, result, currentSampleFrame = m_currentSampleFrame, protectedThis = WTFMove(protectedThis)]() mutable { > > + context().postTask([this, protectedThis = WTFMove(protectedThis), result, currentSampleFrame]() mutable { > > Doesn’t seem like we need callOnMainThread if calling postTask. It already > does callOnMainThread. I think you are looking at the wrong postTask? void BaseAudioContext::postTask(WTF::Function<void()>&& task) { ASSERT(isMainThread()); if (m_isStopScheduled) return; queueTaskKeepingObjectAlive(*this, TaskSource::MediaElement, WTFMove(task)); }
Darin Adler
Comment 7 2020-11-02 12:35:27 PST
OK.
Darin Adler
Comment 8 2020-11-02 12:35:52 PST
Alex said review+. Alex, want to do it again so bugs.webkit.org has the record?
Chris Dumez
Comment 9 2020-11-02 12:37:32 PST
EWS
Comment 10 2020-11-02 13:21:49 PST
Committed r269271: <https://trac.webkit.org/changeset/269271> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412961 [details].
Note You need to log in before you can comment on or make changes to this bug.