[ macOS ] webaudio/OfflineAudioContext/onstatechange.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=217543 <rdar://problem/70160122>

Reviewed by Alex Christensen.

Source/WebCore:

No new tests, unskipped existing test.

* Modules/webaudio/OfflineAudioDestinationNode.cpp:
(WebCore::OfflineAudioDestinationNode::startRendering):
After offline rendering on the audio thread and we go back to the main thread, make sure we queue a task of the
event loop to fire the statechange and completion events. We were previously failing to do so and that meant
that the ordering with other main thread events (which were queued on the event loop) was not always correct.

LayoutTests:

* platform/mac/TestExpectations:
Unskip test that should no longer be flaky.

* webaudio/OfflineAudioContext/onstatechange-expected.txt:
Rebaseline test now that the order of the promise resolution and the statechange event have changed.
Note that the new ordering is consistent with both Chrome and Firefox.


Canonical link: https://commits.webkit.org/231122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269271 268f45cc-cd09-0410-ab3c-d52691b4dbfc